--- a/Project0.test/Project0.test.csproj
+++ b/Project0.test/Project0.test.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project0.Library\Project0.Library.csproj" />
+  </ItemGroup>
+
 </Project>
