--- a/Project0.app/Project0.app.csproj
+++ b/Project0.app/Project0.app.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Project0.Library\Project0.Library.csproj" />
   </ItemGroup>
 
